--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "devDependencies": {
     "concurrently": "4.1.0",
     "jest": "^27.4.7",
-    "nodemon": "1.19.1",
-    "supertest": "^6.2.2"
+    "nodemon": "1.19.1"
   },
   "engines": {
     "node": ">=10.16.3"
